{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 170,
  "lineage": "d084790a-a8b6-55af-6ede-244d906ce38f",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-08T13:36:10.145-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-437716/global/firewalls/allow-outbound",
            "log_config": [],
            "name": "allow-outbound",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-437716/global/networks/default",
            "priority": 1000,
            "project": "terraform-gcp-437716",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-437716/global/firewalls/allow-outbound",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-outbound-tag"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-08T13:36:09.922-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-437716/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-437716/global/networks/default",
            "priority": 1000,
            "project": "terraform-gcp-437716",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-437716/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server",
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "lab-ssrf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240910",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-437716/zones/us-central1-a/disks/lab-ssrf"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-gcp-437716/zones/us-central1-a/instances/lab-ssrf",
            "instance_id": "2165942711883409747",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "lab-user:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCsno8cqwefDf4Y5nD8QjQWj/atdLiRuha4Y9gVXdY1glbi6J7MOCZmjGP8IGBggC0ygjKBjbt7Y0SEu5vbBQQOZ96KwLqUj+gEL8/5+Cnr71f+RgualkbLaafi23uBjmQlZmfoh+/l1/W/AAZFJkUxloaCugUXjnT20hvKAqvao+MZImzH3GVNsd9xjNqXSO7xvxKW0kjYwrSZo37UtJCLUn4AghvLCsZ3p07U8NczXF2ulvhe7x3oWnJcyFD7QZcw55wbRStHyjVLzBs6bnGNxi058Lr0d9qaT75IrIkq+uMFdQ4wbB29EVc+fpZDh1jJ/alPovx5Mh+TrDqeA+MxwHy3Ym+j6d1fZwaB2Z6U91/cvyiRYEl6i9pK27SqVTtVskoo3/IHPeipYsxUL7DFUtTsi+rjrIHQwsgxrvHI [...]
            },
            "metadata_fingerprint": "hDA5XQA9QDI=",
            "name": "lab-ssrf",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.224.95.86",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-437716/global/networks/default",
                "network_ip": "10.128.0.20",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-437716/regions/us-central1/subnetworks/default",
                "subnetwork_project": "terraform-gcp-437716"
              }
            ],
            "project": "terraform-gcp-437716",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-437716/zones/us-central1-a/instances/lab-ssrf",
            "service_account": [
              {
                "email": "120843842381-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server"
            ],
            "tags_fingerprint": "FYLDgkTKlA4=",
            "zone": "us-central1-a"
          }
        }
      ]
    }
  ]
}